--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker: criando e gerenciando containers</li>
-        <li>Ansible</li>
+        <li>Ansible: Infraestrutura como codigo</li>
         <li>Integração Continua</li>
         <li>Kubernetes</li>
     </ul>
