--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: criando e gerenciando containers</li>
         <li>Ansible</li>
-        <li>Integração Continua</li>
+        <li>Integração Continua: Maturidade e Produtividade no Desenvolvimento de Software </li>
         <li>Kubernetes</li>
     </ul>
 </body>
