--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <ul>
         <li>Vagrant</li>
         <li>Docker: criando e gerenciando containers</li>
-        <li>Ansible</li>
-        <li>Integração Continua</li>
+        <li>Ansible: Infraestrutura como codigo</li>
+        <li>Integração Contínua e Entrega Contínua</li>
         <li>Kubernetes</li>
     </ul>
 </body>
