--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <ul>
         <li>Vagrant: Gerenciando máquinas virtuais</li>
         <li>Docker: criando e gerenciando containers</li>
-
         <li>Ansible: Infraestrutura como codigo</li>
         <li>Integração Continua: Maturidade e Produtividade no Desenvolvimento de Software </li>
-
-        <li>Kubernetes</li>
+        <li>Kubernetes: Introdução a orquestração de conteiners</li>
     </ul>
 </body>
 </html>
