--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     <title>Cursos de DevOps da Alura</title>
 </head>
 <body>
-    <ul>
+    <dl>
         <h1>Lista de Cursos DevOps</h1>
         
-        <li>Vagrant: Gerenciando máquinas virtuais</li>
-        <li>Docker: criando e gerenciando containers</li>
-        <li>Ansible: Sua Infraestrutura como codigo</li>
-        <li>Integração Continua: Maturidade e Produtividade no Desenvolvimento de Software </li>
-        <li>Kubernetes: Introdução a orquestração de conteiners</li>
-    </ul>
+        <dt>Vagrant</dt>
+        <dd>Gerenciando máquinas virtuais</dd>
+
+        <dt>Docker:</dt>
+        <dd>Criando e gerenciando containers</dd>
+
+        <dt>Ansible</dt>
+        <dd>Sua Infraestrutura como codigo</dd>
+
+        <dt>Integração Continua</dt>
+        <dd>Maturidade e Produtividade no Desenvolvimento de Software </dd>
+
+        <dt>Kubernetes</dt>
+        <dd>Introdução a orquestração de conteiners</dd>
+    </dl>
 </body>
 </html>
