--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <dl>
-        <h1>Lista de Cursos DevOps</h1>
+        <h2>Lista de Cursos DevOps</h2>
         
         <dt>Vagrant</dt>
         <dd>Gerenciando máquinas virtuais</dd>
@@ -23,5 +23,21 @@
         <dt>Kubernetes</dt>
         <dd>Introdução a orquestração de conteiners</dd>
     </dl>
+
+    <dl>
+        <h2>Cursos de Cloud</h2>
+
+        <dt>Amazon ECS</dt>
+        <dd>Gerencie Docker na nuvem da AWS</dd>
+
+        <dt>Amazon S3</dt>
+        <dd>Manipule e armazene objetos na nuvem</dd>
+
+        <dt>Amazon Elastic Beanstalk Parte 1</dt>
+        <dd>Container Docker</dd>
+        
+    </dl>
+
+
 </body>
 </html>
