--- a/index.html
+++ b/index.html
@@ -23,5 +23,16 @@
         <dt>Kubernetes</dt>
         <dd>Introdução a orquestração de conteiners</dd>
     </dl>
+
+    <dl>
+        <h2>Cursos de Linux </h2>
+
+        <dt>Linux I</dt>
+        <dd>Conhecendo e utilizando o terminal</dd>
+
+        <dt>Linux II</dt>
+        <dd>Programas, processos e pacotes</dd>
+        
+    </dl>
 </body>
 </html>
