--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos de DevOps da Alura</title>
+    <title>Lista Cursos da Alura</title>
 </head>
 <body>
     <dl>
-        <h1>Lista de Cursos DevOps</h1>
+        <h2>Lista de Cursos DevOps</h2>
         
         <dt>Vagrant</dt>
         <dd>Gerenciando máquinas virtuais</dd>
