--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
         <dt>Amazon Elastic Beanstalk Parte 1</dt>
         <dd>Container Docker</dd>
+
+        <dt>Google Cloud</dt>
+        <dd>Deploy de uma aplicação em Spring MVC</dd>
         
     </dl>
 
