Corrigindo Bug: cursos de shell

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 
         <dt>Linux II</dt>
         <dd>Programas, processos e pacotes</dd>
+
+        <dt>Shell Script I</dt>
+        <dd>Scripts de automação de tarefas</dd>
+
+        <dt>Shell Script II</dt>
+        <dd>Fazendo monitoramento, agendando tarefas e backup</dd>
         
     </dl>
 
